--- a/Apirateur/Views/_ViewImports.cshtml
+++ b/Apirateur/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Apirateur
 @using Apirateur.Models
+@using Apirateur.Infrastructure.Session
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@inject ISessionManager sessionManager
